// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Validation [common] example testing should match snapshot(s) for basic 1`] = `
<div
  className="lucid-Validation lucid-Validation-is-error"
>
  <TextField
    debounceLevel={500}
    isDisabled={false}
    isMultiLine={false}
    lazyLevel={1000}
    onBlur={[Function]}
    onChange={[Function]}
    onChangeDebounced={[Function]}
    onKeyDown={[Function]}
    onSubmit={[Function]}
    rows={5}
    value="Text Field Text"
  />
  <div
    className="lucid-Validation-error-content"
  >
    Error One
  </div>
</div>
`;

exports[`Validation [common] example testing should match snapshot(s) for basic 2`] = `
<div
  className="lucid-Validation lucid-Validation-is-error"
>
  <Validation.Error>
    <span>
      Error Two
    </span>
  </Validation.Error>
  <TextField
    debounceLevel={500}
    isDisabled={false}
    isMultiLine={false}
    lazyLevel={1000}
    onBlur={[Function]}
    onChange={[Function]}
    onChangeDebounced={[Function]}
    onKeyDown={[Function]}
    onSubmit={[Function]}
    rows={5}
    value="Text Field Text"
  />
  <div
    className="lucid-Validation-error-content"
  >
    <span>
      Error Two
    </span>
  </div>
</div>
`;

exports[`Validation [common] example testing should match snapshot(s) for basic 3`] = `
<div
  className="lucid-Validation lucid-Validation-is-error"
>
  <TextField
    debounceLevel={500}
    isDisabled={false}
    isMultiLine={true}
    lazyLevel={1000}
    onBlur={[Function]}
    onChange={[Function]}
    onChangeDebounced={[Function]}
    onKeyDown={[Function]}
    onSubmit={[Function]}
    rows={3}
    value="Text Area Text"
  />
  <div
    className="lucid-Validation-error-content"
  >
    Error Three
  </div>
</div>
`;

exports[`Validation [common] example testing should match snapshot(s) for basic 4`] = `
<div
  className="lucid-Validation lucid-Validation-is-error"
>
  <Validation.Error>
    <span>
      Error Four
    </span>
  </Validation.Error>
  <TextField
    debounceLevel={500}
    isDisabled={false}
    isMultiLine={true}
    lazyLevel={1000}
    onBlur={[Function]}
    onChange={[Function]}
    onChangeDebounced={[Function]}
    onKeyDown={[Function]}
    onSubmit={[Function]}
    rows={3}
    value="Text Area Text"
  />
  <div
    className="lucid-Validation-error-content"
  >
    <span>
      Error Four
    </span>
  </div>
</div>
`;
